# Mandatory2

./: CMakeLists.txt  README.md  main.c  note.txt
card/: generateCards.c  generateCards.h  showCards.c  showCards.h
game/: gameState.c  gameState.h  newGame.c  newGame.h
utils/: bingo.h  card.h  game.h
